Update variable names

--- a/templates/initiatorname.iscsi.j2
+++ b/templates/initiatorname.iscsi.j2
@@ -1,1 +1,1 @@
-InitiatorName={{ iscsi_vault_config[ansible_hostname]['iscsi_initiator_name'] }}
+InitiatorName={{ iscsi_devices_vault_config[ansible_hostname]['iscsi_initiator_name'] }}
