Update attribute name for consistency

--- a/templates/60-raw.rules.j2
+++ b/templates/60-raw.rules.j2
@@ -1,4 +1,4 @@
 {% for device in devices %}
 ENV{DM_UUID}=="mpath-{{ iscsi_devices_vault_config[ansible_hostname]['iscsi_device_wwids'][device.alias] }}", RUN+="/bin/raw {{ device.raw_character_device.path }} /dev/mapper/{{ device.alias }}"
-KERNEL=="{{ device.raw_character_device.path | basename }}", ACTION=="add", OWNER="{{ device.raw_character_device.user }}", GROUP="{{ device.raw_character_device.group }}", MODE="0660", SYMLINK+="{{ device.alias }}"
+KERNEL=="{{ device.raw_character_device.path | basename }}", ACTION=="add", OWNER="{{ device.raw_character_device.owner }}", GROUP="{{ device.raw_character_device.group }}", MODE="0660", SYMLINK+="{{ device.alias }}"
 {% endfor %}
