--- a/templates/multipath.conf.j2
+++ b/templates/multipath.conf.j2
@@ -1,14 +1,18 @@
+#jinja2:lstrip_blocks: True
 defaults {
 	user_friendly_names no
 	find_multipaths yes
 }
 
 multipaths {
-    {% for device in iscsi_devices_config %}
+    {% for device in multipath_devices %}
     multipath {
         wwid    {{ iscsi_devices_vault_config[ansible_hostname]['iscsi_device_wwids'][device.alias] }}
         alias	{{ device.alias }}  
     }
+    {% if not loop.last %}
+
+    {% endif %}
     {% endfor %}
 }
 
